// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 4px;
  column-gap: 4px;
}

.emotion-4 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--color);
  font-weight: var(--font-weight);
}

.emotion-5>code {
  color: var(--color);
}

.emotion-5:focus,
.emotion-5:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-5:focus {
  text-decoration-color: var(--focus-text-decoration-color);
  outline: none;
}

.emotion-5:hover {
  text-decoration-color: var(--hover-text-decoration-color);
}

.emotion-6 {
  line-height: 28px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4"
      >
        ← 
      </span>
      <a
        class="emotion-5 emotion-6"
        href="/drivers/csharp/"
        style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
        title="Previous Section"
      >
        MongoDB C#/.NET Driver
      </a>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <a
        class="emotion-5 emotion-6"
        href="/drivers/java/"
        style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
        title="Next Section"
      >
        Java MongoDB Driver
      </a>
      <span
        class="emotion-4"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 4px;
  column-gap: 4px;
}

.emotion-4 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--color);
  font-weight: var(--font-weight);
}

.emotion-5>code {
  color: var(--color);
}

.emotion-5:focus,
.emotion-5:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-5:focus {
  text-decoration-color: var(--focus-text-decoration-color);
  outline: none;
}

.emotion-5:hover {
  text-decoration-color: var(--hover-text-decoration-color);
}

.emotion-6 {
  line-height: 28px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-4"
      >
        ← 
      </span>
      <a
        class="emotion-5 emotion-6"
        href="/drivers/go/"
        style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
        title="Previous Section"
      >
        MongoDB Go Driver
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 4px;
  column-gap: 4px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--color);
  font-weight: var(--font-weight);
}

.emotion-4>code {
  color: var(--color);
}

.emotion-4:focus,
.emotion-4:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  text-decoration-color: var(--focus-text-decoration-color);
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: var(--hover-text-decoration-color);
}

.emotion-5 {
  line-height: 28px;
}

.emotion-6 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        class="emotion-4 emotion-5"
        href="/drivers/go/"
        style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
        title="Next Section"
      >
        MongoDB Go Driver
      </a>
      <span
        class="emotion-6"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;
